# coppelia_sim_ros_interface_msgs

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
msg/: ObjectInfo.msg
srv/: AddLine.srv  AddOrEditObject.srv  GripperControl.srv
